nav-bar spacing fix

--- a/src/components/nav-bar/nav-bar.scss
+++ b/src/components/nav-bar/nav-bar.scss
@@ -1,4 +1,5 @@
 .user {
-    margin-top: 4px;
+    margin-top: 6px;
+        padding: 5px;
 
 }
